--- a/demo.html
+++ b/demo.html
@@ -81,8 +81,7 @@
 <script type="text/javascript" charset="utf-8">
 	var wspp = new wsppclient({
 		ip: 'localhost',
-		port: 8080,
-		connect : {user:1}
+		port: 8080
 	});
 	
     $("#btn").on({
